Add karaoke, song and playlist model

--- a/views/home.erb
+++ b/views/home.erb
@@ -1,3 +1,6 @@
 
 <h1 class='main-title'>Karokakay</h1>
 <p>Your new best friend for your karokeee night!</p>
+
+
+<a href="/karaokes/new">You go create karaoke!</a>
