--- a/views/karaoke_show.erb
+++ b/views/karaoke_show.erb
@@ -1,4 +1,4 @@
 <h1> <%= @karaoke.title %> </h1>
 <p> <%= @karaoke.description %> </p>
 
-<a href="/songs/new?karaoke_id=<%= @karaoke.id %>">Add a song!</a>
+<a href="/karaoke/<%= @karaoke.id %>/playlist">Check out the play list!</a>
