--- a/views/playlist/new.erb
+++ b/views/playlist/new.erb
@@ -1,7 +1,7 @@
 <h1>This is the place to add song to the playlist</h1>
 
 <form action="/karaoke/<%= params[:id] %>
-/playlist/update" method='post'>
+/playlist/create" method='post'>
   <ul>
     <% @songs.each do |song| %>
       <li>
